<resources>
    <string name="app_name">FRC Scouter</string>
    <string name="settings">Settings</string>
    <string name="templates">Templates</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="title_activity_templates">templates</string>
    <string name="template_maker">Template Maker</string>
    <string name="title_activity_add_templates">Add Templates</string>
    <string name="add_templates">Add Templates</string>
    <string name="check_box">Check Box</string>
    <string name="timer">Timer</string>
    <string name="text">Text</string>
    <string name="spinner">Spinner</string>
    <string name="counter">Counter</string>
    <string name="edit_text">Edit Text</string>
    <string name="name_of_activity">Activity Name</string>
    <string name="save">Save</string>
    <string name="title_activity_view">viewActivity</string>
    <string name="listOfTemplates">List of Templates</string>
    <string name="github">Github</string>
    <string name="pages">Github Page</string>
    <string name="title_activity_search">search</string>
    <string name="title_activity_about">About</string>
    <string name="about_app">This is a simple scouting app. You can create custom layouts, and export data to an Excel File.</string>
    <string name="about_me">My name is Sanjit Sarda and I go to RB High School in San Diego. Here is my github.</string>
    <string name="libraries">For this app I used Apache Poi, and the Android Open Source libraries. </string>
    <string name="tab_text_1">About App</string>
    <string name="tab_text_2">About Me</string>
    <string name="tab_text_3">Open Source Libraries</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teams">teams</string>
    <string name="title_activity_view_teams">viewTeams</string>
</resources>