<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.sanjit1.frcscouter.MainActivity">
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/github"
        android:orderInCategory="100"
        android:title="@string/github"
        app:showAsAction="never" />

    <item
        android:id="@+id/githubPage"
        android:orderInCategory="100"
        android:title="@string/pages"
        app:showAsAction="never" />

</menu>
