<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTemplates">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Activity"
        app:titleTextColor="@android:color/black" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_add_templates" />

    <LinearLayout
        android:id="@+id/checkFABHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/checkFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="addView"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_check_box_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timerFABHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/timerFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="addView"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_timer_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTextFABHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/editTextFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="addView"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_text_fields_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinnerFABHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/spinnerFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="addView"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/counterFABHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/counterFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="addView"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_plus_one_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textFABHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/textFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="addView"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_text_fields_black_24dp" />
    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="openCloseFab"
        app:srcCompat="@drawable/plus_fab" />

</android.support.design.widget.CoordinatorLayout>